<?xml version="1.0"?>
<package format="3">
    <name>faster_lio</name>
    <version>0.0.0</version>

    <description>
        FasterLIO is developed from FastLIO2, see related paper: Chunge Bai et al. Faster-LIO: Lightweight Tightly
        Coupled Lidar-inertial Odometry
        using Parallel Sparse Incremental Voxels, IEEE RA-Letters, 2022
    </description>

    <maintainer email="gao.xiang.thu@gmail.com">gaoxiang</maintainer>

    <license>BSD</license>

    <author email="gao.xiang.thu@gmail.com">Gao Xiang</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclpy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>livox_interfaces</build_depend>
    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_eigen</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>livox_interfaces</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
